<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        tools:context=".UpdateEmailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="29dp"
                android:src="@drawable/password_field_icon" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_email"
                    android:layout_marginBottom="10dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/username_field_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/update_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_gravity="center"
                    app:cornerRadius="20dp"
                    app:backgroundTint="@color/pomegranate"
                    android:textColor="@color/white"
                    android:text="@string/confirm"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp" />

                <Button
                    android:id="@+id/exit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit"
                    android:textColor="@color/black"
                    android:background="@color/transparent"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>