<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        tools:context=".ReauthFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="29dp"
                android:src="@drawable/password_field_icon" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_message"
                    android:layout_marginBottom="10dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/password_field_icon"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reauth_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/change_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/change_password"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        />


                    <Button
                        android:id="@+id/change_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:text="@string/change_email"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        />


                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</layout>