<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:id="@+id/checkout_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".GuestCheckoutFragment">

        <LinearLayout
            android:id="@+id/editor_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderdetail_enter_header"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="10dp"
                android:layout_marginTop="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/username_field_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_name"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/home_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card Details"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/credit_card"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/card_number"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="Select Date"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Spinner
                    android:id="@+id/card_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cvv_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cvv"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/credit_card"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginRight="90dp"
                android:layout_marginEnd="90dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cvv_number"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/pomegranate"
                android:textColor="@color/white"
                android:text="@string/confirm"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp" />


        </LinearLayout>
    </ScrollView>
</layout>