<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />
        <import type="android.view.View"/>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:padding="30dp"
        tools:context=".RegisterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="29dp"
                android:src="@drawable/password_field_icon" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/username_field_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/password_field_icon"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/username_field_icon"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/home_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    app:hintTextColor="@color/white"
                    app:startIconDrawable="@drawable/phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:textColor="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"
                    android:layout_gravity="center"
                    android:layout_marginTop="13dp"/>





                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    app:cornerRadius="20dp"
                    app:backgroundTint="@color/pomegranate"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp" />

                <Button
                    android:id="@+id/login_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to_login"
                    android:layout_gravity="center"
                    android:background="@color/transparent"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="24dp" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</layout>